Commit com rota da API para InscricoesExpedicao corrigida, documentacao funcionando
