# storage/api-docs/api-docs.json
@@ -802,6 +802,205 @@
                 }
             }
         },
+        "/expedicoes/{id}/inscricoes": {
+            "get": {
+                "tags": [
+                    "InscricaoExpedicao"
+                ],
+                "summary": "Get a listing of the InscricaoExpedicaos.",
+                "description": "Get all InscricaoExpedicaos",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/InscricaoExpedicao"
+                                    }
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "InscricaoExpedicao"
+                ],
+                "summary": "Store a newly created InscricaoExpedicao in storage",
+                "description": "Store InscricaoExpedicao",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "InscricaoExpedicao that should be stored",
+                        "required": false,
+                        "schema": {
+                            "$ref": "#/definitions/InscricaoExpedicao"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/InscricaoExpedicao"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/expedicoes/{id}/inscricoes/{id}": {
+            "get": {
+                "tags": [
+                    "InscricaoExpedicao"
+                ],
+                "summary": "Display the specified InscricaoExpedicao",
+                "description": "Get InscricaoExpedicao",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of InscricaoExpedicao",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/InscricaoExpedicao"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "InscricaoExpedicao"
+                ],
+                "summary": "Update the specified InscricaoExpedicao in storage",
+                "description": "Update InscricaoExpedicao",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of InscricaoExpedicao",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "InscricaoExpedicao that should be updated",
+                        "required": false,
+                        "schema": {
+                            "$ref": "#/definitions/InscricaoExpedicao"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/InscricaoExpedicao"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "InscricaoExpedicao"
+                ],
+                "summary": "Remove the specified InscricaoExpedicao from storage",
+                "description": "Delete InscricaoExpedicao",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of InscricaoExpedicao",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean"
+                                },
+                                "data": {
+                                    "type": "string"
+                                },
+                                "message": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/inscricaoNewsletters": {
             "get": {
                 "tags": [
@@ -1003,6 +1202,45 @@
         }
     },
     "definitions": {
+        "BlocoDescricao": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "titulo": {
+                    "description": "titulo",
+                    "type": "string"
+                },
+                "texto": {
+                    "description": "texto",
+                    "type": "string"
+                },
+                "owner_id": {
+                    "description": "owner_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "owner_type": {
+                    "description": "owner_type",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
         "ContatoAgente": {
             "required": [
                 ""
@@ -1300,6 +1538,186 @@
                 "contato_telefone": {
                     "description": "contato_telefone",
                     "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "Expedicao": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "titulo": {
+                    "description": "titulo",
+                    "type": "string"
+                },
+                "descricao_listagem": {
+                    "description": "descricao_listagem",
+                    "type": "string"
+                },
+                "data_inicio": {
+                    "description": "data_inicio",
+                    "type": "string",
+                    "format": "date"
+                },
+                "data_fim": {
+                    "description": "data_fim",
+                    "type": "string",
+                    "format": "date"
+                },
+                "media_listagem_id": {
+                    "description": "media_listagem_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "media_listagem_type": {
+                    "description": "media_listagem_type",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "Experiencia": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "titulo": {
+                    "description": "titulo",
+                    "type": "string"
+                },
+                "descricao_listagem": {
+                    "description": "descricao_listagem",
+                    "type": "string"
+                },
+                "data_inicio": {
+                    "description": "data_inicio",
+                    "type": "string",
+                    "format": "date"
+                },
+                "data_fim": {
+                    "description": "data_fim",
+                    "type": "string",
+                    "format": "date"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "Foto": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "image_name": {
+                    "description": "image_name",
+                    "type": "string"
+                },
+                "image_path": {
+                    "description": "image_path",
+                    "type": "string"
+                },
+                "image_extension": {
+                    "description": "image_extension",
+                    "type": "string"
+                },
+                "owner_id": {
+                    "description": "owner_id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "owner_type": {
+                    "description": "owner_type",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "updated_at": {
+                    "description": "updated_at",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "InscricaoExpedicao": {
+            "required": [
+                ""
+            ],
+            "properties": {
+                "id": {
+                    "description": "id",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "nome": {
+                    "description": "nome",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "email",
+                    "type": "string"
+                },
+                "telefone": {
+                    "description": "telefone",
+                    "type": "string"
+                },
+                "cod_status": {
+                    "description": "cod_status",
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "nome_status": {
+                    "description": "nome_status",
+                    "type": "string"
+                },
+                "expedicao_id": {
+                    "description": "expedicao_id",
+                    "type": "integer",
+                    "format": "int32"
                 },
                 "created_at": {
                     "description": "created_at",
